p3/confs/dev/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: dev
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  rules:
  - host: dev.iot
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: iot-wil
            port:
              number: 80
  tls:
  - hosts:
    - dev.iot
    secretName: dev-iot
